<resources>
    <string name="app_name">iseen</string>
    <string name="text_card_setup">卡片设置</string>
    <string name="edit_the_card_info_you_want">在这里编辑欲发送的卡片信息</string>
    <string name="server_address">服务器地址</string>
    <string name="title">标题</string>
    <string name="subtitle">子标题</string>
    <string name="hint">外显</string>
    <string name="card_id">探测标识</string>
    <string name="generate_and_sign">生成&amp;签名</string>
    <string name="edit_history">操控&amp;查看历史数据</string>
    <string name="content_warning">程序仅提供签名后的卡片代码，不提供卡片发送服务；如果您需要发送卡片，请自行寻找可信任的模块。由于不受开发者所能控制的因素居多（如QQ的版本更新导致现有卡片被和谐、所需服务的运营商并不稳定，出现大规模网络攻击、风控及不可抗力因素的影响），故不保证长期可用性，切勿用于非法用途并低调使用。一切开发仅供测试与学习！</string>
    <string name="content_warning_card_gen">程序仅提供签名后的卡片代码，不提供卡片发送服务；使用此功能前，您需要保证您填写的内容具有合规性及合法性。若违反相关规定，相关账号可能会被暂停使用，由于不受开发者所能控制的因素居多，故不保证长期可用性，切勿用于非法用途并低调使用。一切开发仅供测试与学习！</string>
    <string name="title_warning">Warning</string>
    <string name="set_random_uuid">设置随机标识</string>
    <string name="save_cfg">记住所有配置</string>
    <string name="restore_cfg">恢复此前的配置</string>
    <string name="subtitle_follow_id">子标题跟随标识</string>
    <string name="developer">Developer</string>
    <string name="copy_query_url">复制当前查询地址</string>
    <string name="app_subtitle">为你的QQ添加已读检测</string>
    <string name="php_filename_disguised_as_image">探测地址</string>
    <string name="query_data_directory">监听数据存放目录(根目录留空)</string>
    <string name="dev_description"><b>Dev: bilibili@im-cwuom</b>\n\nTelegram Group: <b><u>@cwuoms_group</u></b>\nQQ Group: <b><u>923071208</u></b>\n\n程序构建日期: 2024.4.14\n<i>(单击查看详情)</i></string>
    <string name="cards_history">卡片历史</string>
    <string name="manage_cards_history">管理您之前生成过的卡片</string>
    <string name="item_card_title">监听信息</string>
    <string name="get">Get</string>
    <string name="delete">Delete</string>
    <string name="more_actions">More Actions</string>
    <string name="back">返回</string>
    <string name="del_all_history_on_server">在云端清空所有监听记录(需2FA验证)</string>
    <string name="batch_operation">批量操作</string>
    <string name="del_all_history_on_local">删除所有本地卡片历史</string>
    <string name="no_card_info"><![CDATA[这里貌似只有我一个人捏..( > <.)]]></string>
    <string name="number_of_cards">共%s条历史记录</string>
    <string name="hide_mode_switch">隐匿模式(需服务端支持)</string>
    <string name="switch_hide_edit">隐藏关键输入</string>
    <string name="card_remark">卡片备注</string>
<!--    <string name="item_card_content">I currently don\'t know anything <![CDATA[(> <.)]]>, Try to **Get** it first !</string>-->
    <string name="item_card_content">我现在什么也不知道呀！<![CDATA[(> <.)]]>, 试试先 **Get** 一下吧！</string>
    <string name="setting">设置</string>
    <string name="setup_by_according_to_your_actual">可根据你的实际情况左右程序效果</string>
    <string name="hide_path_setting_hint">隐匿模式路径设置(special/kp/)</string>
    <string name="switch_display_bg">背景图片展示</string>
    <string name="bg_setup">背景图片设定</string>
    <string name="choose_bg">从相册中挑选满意背景..</string>
    <string name="use_default_bg">使用默认背景</string>
    <string name="copy_all">复制全部内容</string>
    <string name="analytic_info">解析内容(复制部分内容)</string>
    <string name="more">···</string>
    <string name="disable_listening_err_notifications">屏蔽监听错误通知</string>
    <string name="interval_setting">监听间隔设置(默认30s)</string>
    <string name="_2fa_verify_url_setup">2FA验证地址设定</string>
    <string name="push_or_req_setup">通知推送/请求设定</string>
    <string name="push_or_req_setup_subtitle">在这里你可以设置请求间隔及屏蔽部分通知</string>
    <string name="interval_setting_hint">每隔(?)秒请求一次</string>
    <string name="push_setting">通知设定</string>
    <string name="mask_request_timeout_notification">屏蔽请求超时通知</string>
    <string name="mask_request_err_notification">屏蔽请求异常通知</string>
    <string name="push_setup">消息推送设置</string>
    <string name="save_and_apply">保存并应用</string>
    <string name="use_dev_cfg">填充默认服务器设置</string>
    <string name="home">首页</string>
    <string name="card_generator">卡片生成器</string>
    <string name="profile">个人</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_update_uuid">自动更新标识</string>
    <string name="username">\@%s</string>
    <string name="uid">唯一标识: %s</string>
    <string name="login">登录</string>
    <string name="create_time">注册日期: %s</string>
    <string name="info">个人简介: %s</string>
    <string name="vip_info">"BiliBili大会员: %s"</string>
    <string name="permission_info">权限组: %s</string>
    <string name="following">关注: %s</string>
    <string name="log_out">注销</string>
    <string name="placeHolder">软件可能会上传您的登录数据至服务端以便于鉴权和判断账户所有者；但在服务器不会有意记录下您的登录凭证，通常不会对您的账户造成威胁。<b>如果您登录即视为同意此声明</b></string>
    <string name="profile_warning_title">登录前须知</string>
    <string name="tips_title">Tips</string>
    <string name="tips">为避免频繁拉取API，用户信息需手动更新，请下拉刷新您的账户信息。\n如果您不小心登出，您任然可以通过下拉刷新来恢复您的登录状态</string>
    <string name="birthday">生日: %s</string>
    <string name="coins">Ark-Coins: %s</string>
    <string name="custom_image_address">自定义图片地址</string>
    <string name="custom_ark">Custom-Ark</string>
    <string name="custom_ark_info">自定义你的Ark卡片</string>
    <string name="card_type">卡片类型</string>
    <string name="p_skey">p_skey</string>
    <string name="skey">skey</string>
    <string name="uin">uin</string>
    <string name="card_btn_title">按钮标题</string>
    <string name="card_btn_jumpurl">按钮跳转链接</string>
    <string name="jumpurl">跳转链接</string>
    <string name="thumbnailUrl">缩略图URL</string>
    <string name="card_tagIcon">标签旁边的小图标的URL</string>
    <string name="card_tag">标签</string>
    <string name="card_preview">预览图URL</string>
    <string name="card_desc">卡片描述</string>
    <string name="card_cover">预览大图URL</string>
    <string name="card_prompt">卡片外显</string>
    <string name="card_title">卡片标题</string>
    <string name="card_f1">字段1</string>
    <string name="card_f2">字段2</string>
    <string name="card_f3">字段3</string>
    <string name="card_f4">字段4</string>
    <string name="card_f5">字段5</string>
    <string name="card_subtitle">卡片副标题</string>
    <string name="login_qzone">登录QQ空间</string>
    <string name="Setting">设置</string>
    <string name="ui_setting">UI 设置</string>
    <string name="thin_mode">精简模式</string>
    <string name="lang">语言</string>
    <string name="theme_setting">主题设定</string>
    <string name="default_">默认</string>
    <string name="api_setting">API 设置</string>
    <string name="signature_server_address">签名服务器地址</string>
    <string name="authentication_server_address">鉴权服务器地址</string>
    <string name="troubleshooting_debugging">故障排查/调试</string>
    <string name="interface_usability_testing">接口可用性测试</string>
    <string name="click_for_details">单击获取详情</string>
    <string name="use_default_api_settings">使用默认服务器配置</string>
    <string name="click_autofill_api_settings">单击自动填充API设置</string>
    <string name="ui_mode">UI 模式</string>
    <string name="hide_status_bar_below">沉浸模式</string>
    <string name="color_sakura">樱花</string>
    <string name="color_blue">蓝色</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="some_functions_need_to_be_restarted_to_fully_apply">因为部分功能需要重启才能完全应用</string>
    <string name="why_didnt_it_take_effect">为什么没有生效？</string>
    <string name="Q_and_A">常见问题</string>
    <string name="about">关于</string>
    <string name="hidden_warning_desc">隐藏警告不代表您可以忽略它们，我们仍有权利终止相关服务</string>
    <string name="hidden_warning_title">隐藏警告提示</string>
    <string name="hide_status_bar_below_desc">针对全面屏的适配，现阶段可能有问题</string>
    <string name="thin_mode_desc">去掉一些卡片和自定义元素，保留主要功能</string>
    <string name="classic">经典</string>
    <string name="account_setting">账号设置</string>
    <string name="QQ_account">QQ账户</string>
    <string name="QQ_password">QQ密码</string>
    <string name="save_template">保存模板</string>
    <string name="fill_template">填充模板</string>
    <string name="disclaimer_content">在使用 iseen 软件（以下简称“软件”）之前，请仔细阅读并理解以下条款：\n\n<b>API使用</b>: 软件调用了第三方API，这些API的使用仅限于软件内部，与API的作者无关。我们对这些API的任何问题或故障不承担任何责任。\n<b>用户责任</b>: 使用软件的用户需对自己的行为负责，包括但不限于数据输入、输出和操作。软件作者不对因使用软件导致的任何直接或间接损失承担责任。\n<b>知识产权</b>: 所有通过此软件获取的信息和内容都受到版权、商标和其他相关法律的保护。未经授权的复制、分发或使用可能违反法律。\n<b>免责声明</b>: 我们尽力确保软件的正常运作，但无法保证其永久可用或完全无误。因此，您应对任何由于软件中断、延迟、错误、故障或其他问题导致的损失承担责任。\n<b>隐私政策</b>: 我们尊重用户的隐私权，不会收集、使用或披露您的个人信息，除非法律要求或经您明确同意。\n\n请注意，本免责声明可能随时更新，请定期查看最新版本。通过使用 iseen 软件，您同意遵守上述条款和条件。</string>
    <string name="disclaimer">免责声明</string>
    <string name="apply_now">立即应用 UI 设置</string>
    <string name="recreate">这将重载所有的 Fragment</string>
</resources>